--- a/css/verao2015.css
+++ b/css/verao2015.css
@@ -13,10 +13,10 @@ video {
 	right: 0px; 
 	min-width: 100%; 
 	min-height: 100%; 
+    max-height: 100%;
 	width: auto; 
 	height: auto; 
-	z-index: -1000; 
-	overflow: hidden; 
+	z-index: -1000;  
  }
 
 #glass {
