--- a/css/verao2015.css
+++ b/css/verao2015.css
@@ -25,3 +25,15 @@ video {
     background-color: rgba(255, 255, 255, 0.1);
     background: rgba(255, 255, 255, 0.1);
   }
+
+.fullscreen_bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-image: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg);
+    background-repeat:repeat;
+  }
