--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -17,15 +17,7 @@
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
-		<div class="header-unit">
-			<div id="video-container">
-				<video autoplay loop preload muted class="fillWidth" id="verao2015">
-					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
-					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
-				</video>
-			</div><!-- end video-container -->
-		</div><!-- end .header-unit -->
-
+    	<div id="fullscreen_bg" class="fullscreen_bg"></div>
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">
 			    <div class="col-md-12 column" id="glass">
@@ -35,13 +27,12 @@
 					</p>
 					<br>
     			</div>
-			</div>
-				 	
+			</div>		 	
 			<div class="row-fluid clearfix">
 			    <div class="col-md-12 column" id="glass">
 			 		<br>  
-			        <h3>Nunca foi tão fácil se divertir.</h3>
-			        <h4>Quer ser exclusivo e descobrir como?</h4>
+			        	<h3>Nunca foi tão fácil se divertir.</h3>
+			        	<h4>Quer ser exclusivo e descobrir como?</h4>
 		            <form action="" method="post">
 		                <div class="input-group">
 		                     <input type="email" class="form-control" placeholder="digite o seu email aqui" required="" autofocus>
@@ -53,15 +44,16 @@
 		            </form> 
 				</div>
 			</div>
+				<div class="row-fluid clearfix">
+					<p class="text-center">
+						<video loop preload class="fillWidth" id="mverao2015">
+							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
+							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
+						</video>
+					</p>
+				</div>
 		</div>
-
 	</body>
-	<script>
-		myVid=document.getElementById("verao2015");
-  		myVid.webkitEnterFullscreen();
-  		myVid.load();
-  		myVid.play();
-	</script> 
 	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
