--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -50,10 +50,16 @@
 			        <h4>Quer ser exclusivo e descobrir como?</h4>
 		            <form action="" method="post">
 		                <div class="input-group">
-		                     <input type="email" class="form-control" placeholder="digite o seu email aqui" required="" autofocus>
+		                    <input type="email" id="user.cdUser" class="form-control" placeholder="digite o seu email aqui" required="" autofocus>
       						<span class="input-group-btn">
-        						<button class="btn btn-large btn-primary" type="button">Enviar!</button>
+        						<button id="btSubmit" class="btn btn-large btn-primary" type="button" disabled="disabled" >Enviar</button>
       						</span>
+//type="button"
+                              <div class="alert alert-warning alert-dismissable" id="sucessAlert" >
+							     <button class="close" data-dismiss="alert" >&times;</button>
+							     <strong>Atenção</strong>
+							     O seu email não é válido, por favor, digite novamente.
+						      </div>
 		                </div>
 		                <br />
 		            </form> 
@@ -73,4 +79,6 @@
 	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/loginController.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/login.js"></script>
 </html>
