Inclusão do css do login e alteração do JS de validação de email.

--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" />
         <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/verao2015.css" /> 
+        <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/provider/css/login.css" />
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
