--- a/css/verao2015.css
+++ b/css/verao2015.css
@@ -37,3 +37,8 @@ video {
     background-image: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg);
     background-repeat:repeat;
   }
+
+.alert {
+    margin-top: 20px;
+    display: none;
+  }
