Alterações e adicionei a propriedade desabe na div do bootstrap de mensagem.

--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -55,7 +55,7 @@
         						<button id="btSubmit" class="btn btn-large btn-primary" type="button" disabled="disabled" >Enviar</button>
       						</span>
 		                </div>
-                        <div class="alert alert-warning alert-dismissable" id="sucessAlert" >
+                        <div class="alert-dismissable" id="sucessAlert" disable="disabled">
 							 <button class="close" data-dismiss="alert" >&times;</button>
 							 <strong>Atenção</strong>
 							 O seu email não é válido, por favor, digite novamente.
