--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -55,12 +55,17 @@
         						<button id="btSubmit" class="btn btn-large btn-primary" type="button" disabled="disabled" >Enviar</button>
       						</span>
 		                </div>
-                        <div class="alert-dismissable" id="sucessAlert" disable="disabled">
+
+<!-- comentei para depois ativar o bootstrap de alerta para quando o e-mail estiver errado.
+
+                        <div class="alert-dismissable" id="sucessAlert">
 							 <button class="close" data-dismiss="alert" >&times;</button>
 							 <strong>Atenção</strong>
 							 O seu email não é válido, por favor, digite novamente.
 				        </div>
-		                <br/>
+
+-->
+                        <br/>
 		            </form> 
 		        </div>
 				<div class="col-md-4 column">
