--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -28,23 +28,23 @@
 
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">
-				<div class="col-md-4 column">
+				<div class="col-xs-6 col-sm-4">
 				</div>
-			    <div class="col-md-4 column" id="glass">
+			    <div class="col-xs-6 col-sm-4" id="glass">
     				<br>
     				<p class="text-center">
 						<img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc.png" class="img-rounded" />
 					</p>
 					<br>
     			</div>
-				<div class="col-md-4 column">
+				<div class="col-xs-6 col-sm-4">
 				</div>
 			</div>
 				 	
 			<div class="row-fluid clearfix">
-				<div class="col-md-4 column">
+				<div class="col-xs-6 col-sm-4">
 				</div>
-			    <div class="col-md-4 column" id="glass">
+			    <div class="col-xs-6 col-sm-4" id="glass">
 			 		<br>  
 			        <h3>Nunca foi tão fácil se divertir.</h3>
 			        <h4>Quer ser exclusivo e descobrir como?</h4>
@@ -68,7 +68,7 @@
                         <br/>
 		            </form> 
 		        </div>
-				<div class="col-md-4 column">
+				<div class="col-xs-6 col-sm-4">
 			</div>
 				</div>
 		</div>
