--- a/css/verao2015.css
+++ b/css/verao2015.css
@@ -5,7 +5,7 @@ body {
     background-color: #eee;
     color: white;
     position: absolute;
-    overflow: hidden;
+<!--    overflow: hidden; -->
   }
 
 video {
