--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -11,16 +11,16 @@
     	<meta name="keywords" content="ichose, provider, baladas, eventos, festas, shows, comanda, digital, danceteria, software, balcão"/>
     	<meta name="author" content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
 
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" />
-        <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/verao2015.css" /> 
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/mverao2015.css"> 
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
     	<div id="fullscreen_bg" class="fullscreen_bg"></div>
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">
-			    <div class="col-md-12 column" id="glass">
+			    <div class="col-xs-12 col-sm-12" id="glass">
     				<br>
     				<p class="text-center">
 						<img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc.png" class="img-rounded" />
@@ -29,7 +29,7 @@
     			</div>
 			</div>		 	
 			<div class="row-fluid clearfix">
-			    <div class="col-md-12 column" id="glass">
+			    <div class="col-xs-12 col-sm-12" id="glass">
 			 		<br>  
 			        	<h3>Nunca foi tão fácil se divertir.</h3>
 			        	<h4>Quer ser exclusivo e descobrir como?</h4>
@@ -37,7 +37,7 @@
 		                <div class="input-group">
 		                     <input type="email" class="form-control" placeholder="digite o seu email aqui" required="" autofocus>
       						<span class="input-group-btn">
-        						<button class="btn btn-large btn-primary" type="button">Enviar!</button>
+        						<button class="btn btn-large btn-primary" type="button">Enviar</button>
       						</span>
 		                </div>
 		                <br />
@@ -46,7 +46,9 @@
 			</div>
 				<div class="row-fluid clearfix">
 					<p class="text-center">
-						<video loop preload class="fillWidth" id="mverao2015">
+						<video loop preload autoplay controls="false" height="270" width="480" class="fillWidth" id="mverao2015"
+                               poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg">
+                            <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.mov" type="video/mov">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
 						</video>
@@ -56,5 +58,6 @@
 	</body>
 	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/validaemail.js"></script>
 </html>
