--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -17,7 +17,7 @@
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
-    	<div id="fullscreen_bg" class="fullscreen_bg"></div>
+    <!--	<div id="fullscreen_bg" class="fullscreen_bg"></div> -->
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">
 			    <div class="col-xs-12 col-sm-12" id="glass">
@@ -46,12 +46,22 @@
 			</div>
 				<div class="row-fluid clearfix">
 					<p class="text-center">
-						<video loop preload autoplay controls="false" height="270" width="480" class="fillWidth" id="mverao2015"
+						<!--
+                        <video loop 
+                               preload 
+                               autoplay 
+                               class="fillWidth" 
+                               id="mverao2015"
                                poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg">
-                            <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.mov" type="video/mov">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
 						</video>
+                        -->
+                        <video src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" 
+                               poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg"></video>
+                        <a href="javascript:playPause();">Play/Pause</a> |
+                        <a href="javascript:makeBig();">2x Size</a> |
+                        <a href="javascript:makeNormal();">1x Size</a>
 					</p>
 				</div>
 		</div>
@@ -60,4 +70,23 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/validaemail.js"></script>
+    
+    <script type="text/javascript">
+        function playPause() {
+            var myVideo = document.getElementsByTagName('video')[0];
+            if (myVideo.paused)
+                myVideo.play();
+            else
+                myVideo.pause();
+        }
+       function makeBig() {
+           var myVideo = document.getElementsByTagName('video')[0];
+           myVideo.height = myVideo.videoHeight * 2;
+       }
+       function makeNormal() {
+           var myVideo = document.getElementsByTagName('video')[0];
+           myVideo.height = myVideo.videoHeight;
+       }
+    </script>
+    
 </html>
