--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -17,7 +17,7 @@
         <title>iChose - verão 2014/2015</title>
     </head>
     <body onload="init()">
-    <!--	<div id="fullscreen_bg" class="fullscreen_bg"></div> -->
+    <!--	<div id="fullscreen_bg" class="fullscreen_bg"></div>
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">
 			    <div class="col-xs-12 col-sm-12" id="glass">
@@ -45,7 +45,6 @@
 				</div>
 			</div>
 				<div class="row-fluid clearfix">
-						<!--
                         <video loop 
                                preload 
                                autoplay 
