--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -59,8 +59,10 @@
                         <video autoplay
                                src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" 
                                poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg"></video>
-				</div>
+<!--				</div>
 		</div>
+-->
+         <input type="button" id="fs" value="Fullscreen" onclick="goFullscreen()" style="visibility:hidden">
 	</body>
 	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
