--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -29,13 +29,6 @@
         }
     </style>
     <script type="text/javascript">
-        function playPause() {
-            var myVideo = document.querySelector('video');
-            if (myVideo.paused)
-                myVideo.play();
-            else
-                myVideo.pause();
-         }
         function goFullscreen() {
             var myPlayer = document.getElementById('video-player');
             myPlayer.webkitRequestFullscreen();
@@ -43,7 +36,7 @@
     </script>
         
     </head>
-    <body>
+    <body onload="goFullscreen()">
     <!--	<div id="fullscreen_bg" class="fullscreen_bg"></div>
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">
@@ -83,19 +76,17 @@
 						</video>
                         -->
                         <div id="video-player">
-                        <video autoplay 
-                               src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" 
-                               poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg"></video>
-                               <p><a href="javascript:playPause();">Play/Pause</a></p>
-                        </div>
-        <a href="javascript:goFullscreen();">Full-screen</a>
+                        <video
+                               src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4"></video>
+                       </div>
 <!--				</div>
 		</div>
 -->
 	</body>
-	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+<!--
+    <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/validaemail.js"></script>
-
+-->
 </html>
