teste do arquivo m4v

--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -39,7 +39,7 @@
     <body onload="goFullscreen()">
     <!--	<div id="fullscreen_bg" class="fullscreen_bg"></div>
 		<div class="container-fluid">
-			<div class="row-fluid clearfix">
+			<div class="row-fluid clearfix">https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v
 			    <div class="col-xs-12 col-sm-12" id="glass">
     				<br>
     				<p class="text-center">
@@ -77,7 +77,7 @@
                         -->
                         <div id="video-player">
                         <video
-                               src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4"></video>
+                               src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v"></video>
                        </div>
 <!--				</div>
 		</div>
