--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -3,12 +3,9 @@
     <head>
 
     	<!-- Meta, title, CSS, favicons, etc. -->
-    	<!--<meta charset="iso-8859-1"/> -->
     	<meta charset="utf-8"/>
     	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>    	
-        <!--
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    	-->
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <meta name="keywords" content="ichose, provider, baladas, eventos, festas, shows, comanda, digital, danceteria, software, balcão"/>
     	<meta name="author" content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
 <!--
@@ -18,20 +15,11 @@
 -->
     <title>iChose - verão 2014/2015</title>
 
-   <style>
-        #video-player:-webkit-full-screen {
-            width: 100%;
-            height: 100%;
-            background-color: black;
-        }
-        #video-player:-webkit-full-screen video {
-            width: 100%;
-        }
-    </style>
     <script type="text/javascript">
         function goFullscreen() {
             var myPlayer = document.getElementById('video-player');
             myPlayer.webkitRequestFullscreen();
+            myPlayer.webkitEnterFullscreen ()
         }
     </script>
         
@@ -75,10 +63,11 @@
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
 						</video>
                         -->
-                        <div id="video-player">
-                        <video
+
+                        <video autoplay
+                               width="100%"
                                src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v"></video>
-                       </div>
+
 <!--				</div>
 		</div>
 -->
