--- a/css/mverao2015.css
+++ b/css/mverao2015.css
@@ -14,7 +14,15 @@ body {
     background: rgba(255, 255, 255, 0.1);
   }
 
-.alert-dismissable {
-    margin-top: 20px;
-    display: none;
+#mverao2015 {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    background: url() repeat;
+    background-size: cover;
   }
