--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -8,24 +8,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <meta name="keywords" content="ichose, provider, baladas, eventos, festas, shows, comanda, digital, danceteria, software, balcão"/>
     	<meta name="author" content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
-<!--
+
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/mverao2015.css"> 
--->
-    <title>iChose - verão 2014/2015</title>
 
-    <script type="text/javascript">
-        function goFullscreen() {
-            var myPlayer = document.getElementById('video-player');
-            myPlayer.webkitRequestFullscreen();
-            myPlayer.webkitEnterFullscreen ()
-        }
-    </script>
-        
+    <title>iChose - verão 2014/2015</title>
     </head>
     <body onload="goFullscreen()">
-    <!--	<div id="fullscreen_bg" class="fullscreen_bg"></div>
+    <div id="fullscreen_bg" class="fullscreen_bg"></div>
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v
 			    <div class="col-xs-12 col-sm-12" id="glass">
@@ -53,29 +44,21 @@
 				</div>
 			</div>
 				<div class="row-fluid clearfix">
-                        <video loop 
-                               preload 
-                               autoplay 
-                               class="fillWidth" 
-                               id="mverao2015"
-                               poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg">
+                    <video  loop 
+                            preload 
+                            autoplay  
+                            id="mverao2015"
+                            poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
-						</video>
-                        -->
+                            <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v" type="video/m4v">
+                    </video>
 
-                        <video autoplay
-                               width="100%"
-                               src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v"></video>
-
-<!--				</div>
+				</div>
 		</div>
--->
 	</body>
-<!--
     <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/validaemail.js"></script>
--->
 </html>
