--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -44,9 +44,9 @@
 				</div>
 			</div>
 				<div class="row-fluid clearfix">
-                    <video  loop 
+                    <video  loop=""
                             preload 
-                            autoplay  
+                            autoplay=""  
                             id="mverao2015"
                             poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
