--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt" data-ng-app>
     <head>
-
     	<!-- Meta, title, CSS, favicons, etc. -->
     	<meta charset="utf-8"/>
     	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>    	
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <meta name="keywords" content="ichose, provider, baladas, eventos, festas, shows, comanda, digital, danceteria, software, balcão"/>
     	<meta name="author" content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
-
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/mverao2015.css"> 
-
-    <title>iChose - verão 2014/2015</title>
+        <title>iChose - verão 2014/2015</title>
     </head>
-    <body onload="goFullscreen()">
+    <body>
     <div id="fullscreen_bg" class="fullscreen_bg"></div>
 		<div class="container-fluid">
-			<div class="row-fluid clearfix">https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v
+			<div class="row-fluid clearfix">
 			    <div class="col-xs-12 col-sm-12" id="glass">
     				<br>
     				<p class="text-center">
@@ -44,16 +41,12 @@
 				</div>
 			</div>
 				<div class="row-fluid clearfix">
-                    <video  loop=""
-                            preload 
-                            autoplay=""  
-                            id="mverao2015"
-                            poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg">
+                    <video  preload 
+                            id="mverao2015">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
                             <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v" type="video/m4v">
                     </video>
-
 				</div>
 		</div>
 	</body>
