--- a/css/mverao2015.css
+++ b/css/mverao2015.css
@@ -14,6 +14,18 @@ body {
     background: rgba(255, 255, 255, 0.1);
   }
 
+.fullscreen_bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-image: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg);
+    background-repeat:repeat;
+  }
+
 video #mverao2015 {
     position: fixed;
     right: 0;
@@ -23,10 +35,5 @@ video #mverao2015 {
     width: auto;
     height: auto;
     z-index: -100;
-    background: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg) repeat;
     background-size: cover;
   }
-
-video {
-    display:block;
-}
