video sem background

--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -41,8 +41,7 @@
 				</div>
 			</div>
 				<div class="row-fluid clearfix">
-                    <video  preload 
-                            id="mverao2015">
+                    <video  preload>
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
 							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
                             <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v" type="video/m4v">
