--- a/css/mverao2015.css
+++ b/css/mverao2015.css
@@ -1,7 +1,7 @@
 body {
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
     background-color: #eee;
     color: white;
     position: absolute;
@@ -24,4 +24,5 @@ body {
     background-position: 50% 50%;
     background-image: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg);
     background-repeat:repeat;
+    z-index: -1
   }
