--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -41,11 +41,15 @@
 				</div>
 			</div>
 				<div class="row-fluid clearfix">
-                    <video  preload>
-							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
-							<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
-                            <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v" type="video/m4v">
-                    </video>
+                    <div class="col-xs-12 col-sm-12" id="glass">
+                        <p class="text-center">
+                        <video  preload>
+                                <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
+                                <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
+                                <source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.m4v" type="video/m4v">
+                        </video>
+                        </p>
+                    </div>
 				</div>
 		</div>
 	</body>
