--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -10,18 +10,15 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1"/>
     	<meta name="keywords" content="ichose, provider, baladas, eventos, festas, shows, comanda, digital, danceteria, software, balcão"/>
     	<meta name="author" content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
-
-        <link rel="stylesheet" href= "//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >
-<!--        
+        <link rel="stylesheet" href= "//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
         <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.css" >
--->
         <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/verao2015.css" > 
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
 		<div class="header-unit">
 			<div id="video-container">
-				<video autoplay loop preload muted class="fillWidth" id="verao2015">
+				<video autoplay loop preload muted id="verao2015">
 					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
 					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
 				</video>
@@ -30,23 +27,23 @@
 
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">
-				<div class="col-xs-6 col-sm-4">
+				<div class="col-md-4 column">
 				</div>
-			    <div class="col-xs-6 col-sm-4" id="glass">
+			    <div class="col-md-4 column" id="glass">
     				<br>
     				<p class="text-center">
 						<img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc.png" class="img-rounded" />
 					</p>
 					<br>
     			</div>
-				<div class="col-xs-6 col-sm-4">
+				<div class="col-md-4 column">
 				</div>
 			</div>
 				 	
 			<div class="row-fluid clearfix">
-				<div class="col-xs-6 col-sm-4">
+				<div class="col-md-4 column">
 				</div>
-			    <div class="col-xs-6 col-sm-4" id="glass">
+			    <div class="col-md-4 column" id="glass">
 			 		<br>  
 			        <h3>Nunca foi tão fácil se divertir.</h3>
 			        <h4>Quer ser exclusivo e descobrir como?</h4>
@@ -57,20 +54,10 @@
         						<button id="btSubmit" class="btn btn-large btn-primary" type="button" disabled="disabled" >Enviar</button>
       						</span>
 		                </div>
-
-<!-- comentei para depois ativar o bootstrap de alerta para quando o e-mail estiver errado.
-
-                        <div class="alert-dismissable" id="sucessAlert">
-							 <button class="close" data-dismiss="alert" >&times;</button>
-							 <strong>Atenção</strong>
-							 O seu email não é válido, por favor, digite novamente.
-				        </div>
-
--->
                         <br/>
 		            </form> 
 		        </div>
-				<div class="col-xs-6 col-sm-4">
+				<div class="col-md-4 column">
 			    </div>
             </div>
 		</div>
