--- a/css/verao2015.css
+++ b/css/verao2015.css
@@ -5,19 +5,20 @@ body {
     background-color: #eee;
     color: white;
     position: absolute;
+    overflow: hidden;
   }
 
-video {
-	bottom: 0px; 
-	right: 0px; 
-	min-width: 100%; 
-	min-height: 100%; 
-    max-height: 100%;
-	width: auto; 
-	height: auto; 
-	z-index: -1000;  
+video #verao2014 {
+    position: absolute; 
+    right: 0; 
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    width: auto; 
+    height: auto; 
+    z-index: -100;
     overflow: hidden;
- }
+}
 
 #glass {
     background-color:#fff;
