--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -18,14 +18,19 @@
     <body>
 		<div class="header-unit">
 			<div id="video-container">
-				<video autoplay loop preload muted id="verao2015">
+				<video autoplay 
+                       loop 
+                       preload 
+                       muted 
+                       poster="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg" 
+                       id="verao2015">
 					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
 					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
 				</video>
 			</div><!-- end video-container -->
 		</div><!-- end .header-unit -->
-
-		<div class="container-fluid">
+		
+        <div class="container-fluid">
 			<div class="row-fluid clearfix">
 				<div class="col-md-4 column">
 				</div>
@@ -38,8 +43,7 @@
     			</div>
 				<div class="col-md-4 column">
 				</div>
-			</div>
-				 	
+            </div>		 	
 			<div class="row-fluid clearfix">
 				<div class="col-md-4 column">
 				</div>
@@ -61,15 +65,16 @@
 			    </div>
             </div>
 		</div>
-
 	</body>
-	<script>
+
+    <script>
 		myVid=document.getElementById("verao2015");
   		myVid.webkitEnterFullscreen();
   		myVid.load();
   		myVid.play();
 	</script> 
-	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+
+    <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src= "//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" ></script>
     <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/validaemail.js"></script>
