--- a/css/verao2015.css
+++ b/css/verao2015.css
@@ -16,6 +16,7 @@ body {
     height: auto; 
     z-index: -100;
     position: fixed;
+    background: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg) no-repeat;
     background-size: cover;
 }
 
