--- a/index.ejs
+++ b/index.ejs
@@ -33,7 +33,7 @@
             </li>
             <li><a data-scroll href="#brands" target="">Baladas</a>
             </li>
-            <li><a href="#" target="">Fornecedor</a>
+            <li><a href="http://provider.ichose.com.br/" target="">Fornecedor</a>
             </li>
             <li><a data-scroll href="#faq" target="">FAQ</a>
             </li>
@@ -161,7 +161,7 @@
                     <textarea name="" placeholder="Mensagem"></textarea>
                     <input type="text" name="" value="" placeholder="Nome">
                     <input type="text" name="" value="" placeholder="E-mail">
-                    <input type="submit" name="" value="SAY HELLO">
+                    <input type="submit" name="" value="Olá">
                 </form>
             </li>
             <li class="logo-area">
@@ -207,6 +207,19 @@
         callbackBefore: function(toggle, anchor) {},
         callbackAfter: function(toggle, anchor) {}
     });
+    </script>
+    
+    <!-- Google Universal Analytics 
+    ===============================
+    -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-7764158-3', 'auto');
+        ga('send', 'pageview');
     </script>
     
 </body>
