--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -57,4 +57,18 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/validaemail.js"></script>
+    
+    <!-- Google Universal Analytics 
+    ===============================
+    -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-7764158-3', 'auto');
+        ga('send', 'pageview');
+    </script>
+    
 </html>
