--- a/index.ejs
+++ b/index.ejs
@@ -219,6 +219,7 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-7764158-3', 'auto');
+        ga('require', 'displayfeatures');
         ga('send', 'pageview');
     </script>
     
