--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -68,6 +68,7 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-7764158-3', 'auto');
+        ga('require', 'displayfeatures');
         ga('send', 'pageview');
     </script>
     
