--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt" data-ng-app>
+<html lang="pt-br" data-ng-app>
     <head>
     	<!-- Meta, title, CSS, favicons, etc. -->
     	<meta charset="utf-8"/>
