--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt" data-ng-app>
+<html lang="pt-br" data-ng-app>
     <head>
     	<!-- Meta, title, CSS, favicons, etc. -->
     	<!--<meta charset="iso-8859-1"/> -->
@@ -8,7 +8,7 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1"/>
     	<meta name="keywords" content="ichose, provider, baladas, eventos, festas, shows, comanda, digital, danceteria, software, balcão"/>
     	<meta name="author" content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
-        <link rel="stylesheet" href= "//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
+        <link rel="stylesheet" href= "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
         <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
         <link rel="stylesheet" type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/verao2015.css" > 
         <title>iChose - verão 2014/2015</title>
