--- a/index.ejs
+++ b/index.ejs
@@ -189,6 +189,7 @@
                 <a href="#" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
                 </a>
+                <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
             </li>
         </ul>
     </footer>
