--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -62,6 +62,28 @@
 			    </div>
             </div>
 		</div>
+    
+    <footer>
+        <ul class="footer-area">
+            <li>
+                <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc_footer.png" />
+            </li>
+            <li>
+                <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com.br</a>
+                <span>+55 48 8822 9472</span>
+            </li>
+            <li>
+                <a href="#" target="_blank">
+                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
+                </a>
+                <a href="#" target="_blank">
+                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
+                </a>
+                <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
+            </li>
+        </ul>
+    </footer>
+        
 	</body>
 
     <script src="http://code.jquery.com/jquery-2.1.0.js"></script>
