--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -52,6 +52,21 @@
                     </div>
 				</div>
 		</div>
+    <footer>        
+            <ul class="footer-area">
+            <strong>Rede Social</strong>
+            <li>
+                <a href="#" target="_blank">
+                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
+                </a>
+                <a href="#" target="_blank">
+                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
+                </a>
+                <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
+            </li>
+        </ul>
+    </footer>    
+        
 	</body>
     <script src="http://code.jquery.com/jquery-2.1.0.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
