--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -65,13 +65,7 @@
     
     <footer>
         <ul class="footer-area">
-            <li>
-                <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc_footer.png" />
-            </li>
-            <li>
-                <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com.br</a>
-                <span>+55 48 8822 9472</span>
-            </li>
+            <strong>Rede Social</strong>
             <li>
                 <a href="#" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
