--- a/index.ejs
+++ b/index.ejs
@@ -10,11 +10,12 @@
     <meta name="keywords"               content="ichose, provider, baladas, eventos, festas, shows, comanda, digital, danceteria, software, balcão"/>
     <meta name="author"                 content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
     
-    <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+    <link rel="author"          href="https://google.com/+FabioLenine"/>
+    <link rel='stylesheet'      href='http://fonts.googleapis.com/css?family=Raleway:100'   type='text/css'>
     <link rel="stylesheet"      href= "//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
     <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
     <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/main.css">
-    <link rel="shortcut icon"   href="img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon"   href="img/favicon.ico"                                      type="image/x-icon"/>
 
     <!-- Favicon -->
 
