--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" ng-app="verao2015App">
+<html lang="pt-br" data-ng-app="verao2015App">
     <head>
     	<!-- Meta, title, CSS, favicons, etc. -->
     	<!--<meta charset="iso-8859-1"/> -->
