--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -57,6 +57,10 @@
         						<button id="btSubmit" class="btn btn-large btn-primary" type="button" disabled="disabled" ng-click="enviar()">Enviar</button>
       						</span>
 		                </div>
+                        <div class  = "alert alert-success"
+                             role   = "alert">
+                             <h3>Obrigado, foi enviado um e-mail para confirmação.</h3> 
+                        </div>
                         <br/>
 		            </form> 
 		        </div>
