--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -38,6 +38,11 @@
         						<button class="btn btn-large btn-primary" type="button" ng-click="enviar()">Enviar</button>
       						</span>
 		                </div>
+                        <div class      = "alert alert-success"
+                             role       = "alert"
+                             ng-show    = "sucesso">
+                             <h4>Obrigado, foi enviado um e-mail para confirmação.</h4> 
+                        </div>
 		                <br />
 		            </form> 
 				</div>
