--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -69,10 +69,15 @@
                                 </button>
       						</span>
 		                </div>
-                        <div class      = "alert alert-success"
+                        <div class      = "alert alert-success alert-dismissible"
                              role       = "alert"
-                             ng-show    = "sucesso">
+                             ng-show    = "show.sucesso">
                              <h4>Obrigado, foi enviado um e-mail para confirmação.</h4> 
+                        </div>
+                        <div class      = "alert alert-warning alert-dismissible"
+                             role       = "alert"
+                             ng-show    = "show.alerta">
+                             <h4>Opss, algo está errado, digite novamente outro e-mail.</h4> 
                         </div>
                         <br/>
 		            </form> 
