--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -76,7 +76,7 @@
                         </div>
                         <div class      = "alert alert-warning alert-dismissible"
                              role       = "alert"
-                             ng-show    = "show.alerta">
+                             ng-hide    = "show.alerta">
                              <h4>Opss, algo está errado, digite novamente outro e-mail.</h4> 
                         </div>
                         <br/>
