--- a/index.ejs
+++ b/index.ejs
@@ -184,10 +184,10 @@
                 <span>+55 48 8822 9472</span>
             </li>
             <li>
-                <a href="#" target="_blank">
+                <a href="https://www.facebook.com/ichoseapp" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://twitter.com/ichoseapp" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
                 </a>
                 <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
