--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -105,10 +105,10 @@
         <ul class="footer-area">
             <strong>Rede Social</strong>
             <li>
-                <a href="#" target="_blank">
+                <a href="https://www.facebook.com/ichoseapp" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://twitter.com/ichoseapp" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
                 </a>
                 <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
