--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -38,10 +38,29 @@
         						<button class="btn btn-large btn-primary" type="button" ng-click="enviar()">Enviar</button>
       						</span>
 		                </div>
-                        <div class      = "alert alert-success"
+                        <div class      = "alert alert-success alert-dismissible"
                              role       = "alert"
-                             ng-show    = "sucesso">
-                             <h4>Obrigado, foi enviado um e-mail para confirmação.</h4> 
+                             ng-show    = "show.sucesso">
+                             <button 
+                                     type           = "button" 
+                                     class          = "close" 
+                                     data-dismiss   = "alert">
+                                 <span aria-hidden  = "true">&times;</span>
+                                 <span class="sr-only">Close</span>
+                              </button>
+                              <h4>Obrigado, foi enviado um e-mail para confirmação.</h4> 
+                        </div>
+                        <div class      = "alert alert-warning alert-dismissible"
+                             role       = "alert"
+                             ng-hide    = "show.alerta">
+                             <button 
+                                     type           = "button" 
+                                     class          = "close" 
+                                     data-dismiss   = "alert">
+                                 <span aria-hidden  = "true">&times;</span>
+                                 <span class="sr-only">Close</span>
+                             </button>
+                             <h4>Opss, algo está errado, digite novamente outro e-mail.</h4> 
                         </div>
 		                <br />
 		            </form> 
@@ -63,10 +82,10 @@
             <ul class="footer-area">
             <strong>Rede Social</strong>
             <li>
-                <a href="#" target="_blank">
+                <a href="https://www.facebook.com/ichoseapp" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://twitter.com/ichoseapp" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
                 </a>
                 <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
