--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -16,10 +16,10 @@
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
-        <ul class="cb-slideshow">
-            <li><span>Image 01</span><div></div></li>
-            <li><span>Image 02</span><div></div></li>
-        </ul>
+        <div class="cb-slideshow">
+            <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG">
+        </div>
+        
         <footer>
         <ul class="footer-area">
             <strong>Rede Social</strong>
