--- a/css/fundo.css
+++ b/css/fundo.css
@@ -1,44 +1,29 @@
-.cb-slideshow,
-.cb-slideshow:after {
-    position    : fixed;
-    width       : 100%;
-    height      : 100%;
-    top         : 0px;
-    left        : 0px;
-    z-index     : 0;
-}
-
-.cb-slideshow li span {
-    width                          : 100%;
-    height                         : 100%;
-    position                       : absolute;
-    top                            : 0px;
-    left                           : 0px;
-    color                          : transparent;
-    background-size                : cover;
-    background-position            : 50% 50%;
-    background-repeat              : none;
-    opacity                        : 0;
-    z-index                        : 0;
-	-webkit-backface-visibility    : hidden;
-    -webkit-animation              : imageAnimation 12s linear infinite 0s;
-    -moz-animation                 : imageAnimation 12s linear infinite 0s;
-    -o-animation                   : imageAnimation 12s linear infinite 0s;
-    -ms-animation                  : imageAnimation 12s linear infinite 0s;
-    animation                      : imageAnimation 12s linear infinite 0s;
-}
-
-.cb-slideshow li:nth-child(1) span { 
-    background-image        : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG) 
-}
-
-.cb-slideshow li:nth-child(2) span {
-    background-image        : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG);
-    -webkit-animation-delay : 6s;
-    -moz-animation-delay    : 6s;
-    -o-animation-delay      : 6s;
-    -ms-animation-delay     : 6s;
-    animation-delay         : 6s;
+.cb-slideshow
+{
+    position                        : fixed;
+    width                           : 100%;
+    height                          : 100%;
+    top                             : 0px;
+    left                            : 0px;
+    z-index                         : 0;
+    position                        : absolute;
+    color                           : transparent;
+    background-size                 : cover;
+    background-position             : 50% 50%;
+    background-repeat               : none;
+	-webkit-backface-visibility     : hidden;
+    -webkit-animation               : imageAnimation 12s linear infinite 0s;
+    -moz-animation                  : imageAnimation 12s linear infinite 0s;
+    -o-animation                    : imageAnimation 12s linear infinite 0s;
+    -ms-animation                   : imageAnimation 12s linear infinite 0s;
+    animation                       : imageAnimation 12s linear infinite 0s;
+    background-image                : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG);
+    -webkit-animation-delay         : 6s;
+    -moz-animation-delay            : 6s;
+    -o-animation-delay              : 6s;
+    -ms-animation-delay             : 6s;
+    animation-delay                 : 6s;
+    background-image                : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG);
 }
 
 /*
@@ -438,9 +423,4 @@
 		animation-timing-function: linear;}
 	100% {transform: scale(1.34);
 		animation-timing-function: linear; }
-}
-
-/* Show at least something when animations not supported */
-.no-cssanimations .cb-slideshow li span{
-	opacity: 1;
 }
