--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css"  href= "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
         <link rel="stylesheet" type="text/css"  href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
         <link rel="stylesheet" type="text/css"  href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/fundo.css" > 
+        <link rel="stylesheet" type="text/css"  href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/main.css">
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
