--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -21,26 +21,56 @@
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG">
         </div>
         
-    <footer>
-        <ul class="footer-area">
-            <li>
-                <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc_footer.png" />
-            </li>
-            <li>
-                <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com.br</a>
-                <span>+55 48 8822 9472</span>
-            </li>
-            <li>
-                <a href="https://www.facebook.com/ichoseapp" target="_blank">
-                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
-                </a>
-                <a href="https://twitter.com/ichoseapp" target="_blank">
-                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
-                </a>
-                <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
-            </li>
-        </ul>
-    </footer>
+        <div class="container-fluid">
+			<div class="row-fluid clearfix">
+			    <div class="col-md-12 column" id="glass">
+    				<br>
+    				<p class="text-center">
+						<img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc.png" class="img-rounded" />
+					</p>
+					<br>
+    			</div>
+            </div>		 	
+			<div class="row-fluid clearfix">
+			    <div class="col-md-12 column" id="glass">
+			 		<br>
+                    <p class="text-center">
+			             <h1><span class="label label-danger">Aaarrrggggh...</span></h1>
+			             <h1><span class="label label-danger">Você não tem permissão de acesso.</span></h1>
+                         <h1><span class="label label-warning">É a vida...</span></h1> 
+                         <h1><span class="label label-warning">Mas, Fala com o dono da festa.</span></h1>
+                         <h1>
+                             <a href="mailto:provider@ichose.com.br">
+                             <span class="label label-info"> 
+                             <span class="glyphicon glyphicon-envelope"></span>
+                                provider@ichose.com.br
+                             </span>
+                             </a>
+                         </h1>
+                    </p>
+		        </div>
+            </div>
+		</div>    
+        <footer>
+            <ul class="footer-area">
+                <li>
+                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc_footer.png" />
+                </li>
+                <li>
+                    <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com.br</a>
+                    <span>+55 48 8822 9472</span>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/ichoseapp" target="_blank">
+                        <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
+                    </a>
+                    <a href="https://twitter.com/ichoseapp" target="_blank">
+                        <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
+                    </a>
+                    <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
+                </li>
+            </ul>
+        </footer>
         
 	</body>
 
