--- a/css/fundo.css
+++ b/css/fundo.css
@@ -1,3 +1,10 @@
+#glass {
+    background-color:#ff0f04;
+    margin:0 auto;
+    background-color: rgba(255, 4, 4, 0.1);
+    background: rgba(255, 4, 4, 0.1);
+  }
+
 .background
 {
     position                        : fixed;
