--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -17,19 +17,18 @@
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
-        <div class="background" class="col-me-12 column">
+        <div class="background">
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG">
         </div>
         	 	
 			<div class="row-fluid clearfix">
-			    <div class="col-md-12 column">
+			    <div class="col-xs-18 col-md-12 col-sm-12">
 			 		<br>
                     <p class="text-center">
-			             <h1><span class="label label-danger">E-mail confirmado.</span></h1>
-			             <h1><span class="label label-danger">Mandaremos noticias.</span></h1>
+			             <h1><span class="label label-success">E-mail confirmado.</span></h1>
                          <h1><span class="label label-warning">Enquanto isso nos acompanhem</span></h1> 
                          <h1><span class="label label-warning">nas redes sociais</span></h1>
-                         <h1><span class="label label-info">Pois temos muitas festas para ir.</span></h1>
+                         <h1><span class="label label-info">Pois, temos muitas festas para ir.</span></h1>
                     </p>
 		        </div>
             </div>
@@ -43,6 +42,7 @@
                     <a href="mailto:hello@ichose.com.br" target="_blank">
                     <span class="glyphicon glyphicon-envelope"></span>    
                     hello@ichose.com.br</a>
+                    <span class="glyphicon glyphicon-phone"></span> 
                     <span>+55 48 8822 9472</span>
                 </li>
                 <li>
