--- a/css/fundo.css
+++ b/css/fundo.css
@@ -1,13 +1,24 @@
+body {
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    position: absolute;
+}
+
 .background
 {
     position                        : fixed;
-    width                           : 100%;
-    height                          : 100%;
+    width                           : auto;
+    height                          : auto;
+    min-width                       : 100%; 
+    min-height                      : 100%;
     top                             : 0px;
     left                            : 0px;
-    z-index                         : 0;
-    position                        : absolute;
+    right                           : 0; 
+    bottom                          : 0;
+    z-index                         : -100;
     color                           : transparent;
+    position                        : fixed;
     background-size                 : cover;
     background-position             : 50% 50%;
     background-repeat               : none;
