--- a/verao2015cancelado.ejs
+++ b/verao2015cancelado.ejs
@@ -25,10 +25,10 @@
 			    <div class="col-xs-18 col-md-12 col-sm-12">
 			 		<br>
                     <p class="text-center">
-			             <h1><span class="label label-danger">Excluído da lista de envio.</span>.</span></h1>
+			             <h1><span class="label label-danger">Excluído da lista de envio.</span></h1>
                          <h1><span class="label label-warning">Enquanto isso conheça-nos</span></h1> 
-                         <h1><span class="label label-warning">nas redes sociais</span></h1>
-                         <h1><span class="label label-info">E visite nosso hotsite.</span></h1>
+                         <h1><span class="label label-warning">nas redes sociais e no hotsite</span></h1>
+                         <h1><span class="label label-info">Quem sabe, você não retorna.</span></h1>
                     </p>
 		        </div>
             </div>
