--- a/verao2015cancelado.ejs
+++ b/verao2015cancelado.ejs
@@ -28,7 +28,7 @@
 			             <h1><span class="label label-danger">Excluído da lista de envio.</span></h1>
                          <h1><span class="label label-warning">Enquanto isso conheça-nos</span></h1> 
                          <h1><span class="label label-warning">nas redes sociais e no hotsite</span></h1>
-                         <h1><span class="label label-info">Quem sabe, você não retorna.</span></h1>
+                         <h1><span class="label label-info">Curtindo você retorna.</span></h1>
                     </p>
 		        </div>
             </div>
