--- a/index.ejs
+++ b/index.ejs
@@ -31,15 +31,15 @@
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_nav.png" />
                 </a>
             </li>
-            <li><a data-scroll href="#intro" target="">IChose</a>
+            <li><a data-scroll href="#intro" target="">iChose</a>
             </li>
             <li><a data-scroll href="#brands" target="">Baladas</a>
             </li>
             <li><a href="http://provider.ichose.com.br/" target="">Fornecedor</a>
             </li>
-            <li><a data-scroll href="#faq" target="">FAQ</a>
+            <li><a data-scroll href="#faq" target="">Dúvidas</a>
             </li>
-            <li><a href="http://tumblr.ichose.com.br/" target="">Tumblr</a>
+            <li><a href="http://tumblr.ichose.com.br/" target="">Blog</a>
             </li>
             <li><a data-scroll href="#contact" target="">Contato</a>
             </li>
@@ -48,7 +48,7 @@
     <header>
         <div>
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc.png" />
-            <p>LOREM IPSUM DOLOR AMET, CONSECTETUR ADIPISCING ELIT</p>
+            <p>CRIADO PENSANDO EM BALADAS. E EM TUDO QUE VOCÊ PODE FAZER NA BALADA.</p>
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/appstore.png" />
         </div>
     </header>
