--- a/index.ejs
+++ b/index.ejs
@@ -53,11 +53,11 @@
         </div>
     </header>
     <section id="intro" class="intro">
-        <h1>Lorem ipsum dolor sit.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia,</p>
-        <p>debitis numquam optio. Recusandae, odio, rem, sequi illum nam quae quaerat et</p>
-        <p>nobis a repellendus optio error numquam nostrum aliquam magni veritatis in</p>
-        <p>eos temporibus nisi enim. Labore modi eum repellendus.</p>
+        <h1>Novo maneira de sair para a night.</h1>
+        <p>Não sabe onde está acontecendo as melhores baladas?</p>
+        <p>Ou então, já está dentro da balada e não quer pegar a fila</p>
+        <p>na hora de pagar?</p>
+        <p>O iChose vai facilitar a sua vida quando o assunto for se jogar na noite.</p>
     </section>
     <section id="brands" class="brands">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
